@@ -41,32 +41,32 @@ span.block		{display:block;}
 .version span	{color:#fff;}
 
 /*	WRAPPERS	*/
-.wrap_title					{padding-bottom:40px;}
-.wrap_reporting_org			{font-size:18px; line-height:1.35em; color:#ccc;}
-.wrap_title span			{display:block; font-size:42px; line-height:1.1em;}
+.wrap_title						{padding-bottom:40px;}
+.wrap_reporting_org				{font-size:18px; line-height:1.35em; color:#ccc;}
+.wrap_title span				{display:block; font-size:42px; line-height:1.1em;}
 .wrap_title span:nth-of-type(2)	{font-style:italic; font-size:30px; line-height:1em;}
-.wrap_reporting_org div		{display:inline-block; vertical-align:top; padding-right:10px;}
-.wrap_iati_identifier		{background-color:rgba(0,14,32,0.7); width:960px; font-size:18px; line-height:1.5em; padding:20px 40px; color:#FFAB5E; margin:0 auto; margin-left:-40px; margin-top:25px;}
+.wrap_reporting_org div			{display:inline-block; vertical-align:top; padding-right:10px;}
+.wrap_iati_identifier			{background-color:rgba(0,14,32,0.7); width:960px; font-size:18px; line-height:1.5em; padding:20px 40px; color:#FFAB5E; margin:0 auto; margin-left:-40px; margin-top:25px;}
 .wrap_iati_identifier.org_id	{margin-top:10px;}
 .wrap_reporting_org .text,
 .wrap_iati_identifier .text		{color:#ccc; text-transform:uppercase; font-size:13px;}
 .wrap_iati_identifier .text a	{font-size:18px; padding-left:5px;}
-.wrap_name_org				{font-size:18px; padding-bottom:10px; color:#fff;}
-.wrap_description			{margin:40px auto;}
-.wrap_description .text		{margin-bottom:30px;}
+.wrap_name_org					{font-size:18px; padding-bottom:10px; color:#fff;}
+.wrap_description				{margin:40px auto;}
+.wrap_description .text			{margin-bottom:30px;}
 .wrap_description .text .narrative					{font-size:1.0em; word-spacing:0.05em; line-height:1.5em; white-space:pre-line; unicode-bidi:embed;}
 .wrap_description .text .narrative:nth-of-type(2)	{font-style:italic; display:block; margin-top:15px;}
 .wrap_description .text .narrative:first-letter		{text-transform:capitalize;}
-.wrap_default				{padding:20px 0 0 0; margin:0 auto;}
-.wrap_default .text			{display:inline-block; vertical-align:top; font-size:14px; color:#ccc; width:50%;}
+.wrap_default					{padding:20px 0 0 0; margin:0 auto;}
+.wrap_default .text				{display:inline-block; vertical-align:top; font-size:14px; color:#ccc; width:50%;}
 .wrap_default .text:first-of-type	{padding-right:20px;}
-.wrap_default .text	span	{font-size:16px; color:#fff; padding-left:10px;}
+.wrap_default .text	span		{font-size:16px; color:#fff; padding-left:10px;}
 .wrap_location .header_section,
 .wrap_budget .header_section	{margin-top:0;}
 .wrap_document					{margin:30px 0;}
 .wrap_budget_not_provided		{padding-bottom:20px; font-size:14px;}
 .wrap_budget_not_provided span	{text-transform:lowercase; font-weight:bold;}
-.reporting_org span	{font-size:12px; margin-left:5px; vertical-align:middle;}
+.reporting_org span				{font-size:12px; margin-left:5px; vertical-align:middle;}
 .reporting_org .narrative:nth-of-type(2)	{font-style:italic;}
 
 /*	GRAPHS	*/
@@ -109,15 +109,15 @@ span.block		{display:block;}
 .wrap_capital_spend .sector_code_text	{max-width:initial;}
 
 /*	DATA SOURCES	*/
-.data_source a		{display:inline-block; vertical-align:baseline; width:12%; background-color:#24405d99; border-radius:4px; text-align:center; font-size:16px; font-variant:all-small-caps; color:#fff; padding:5px 0; margin:10px 2% 5px 0;}
+.data_source a			{display:inline-block; vertical-align:baseline; width:12%; background-color:#24405d99; border-radius:4px; text-align:center; font-size:16px; font-variant:all-small-caps; color:#fff; padding:5px 0; margin:10px 2% 5px 0;}
 .data_source a:link		{color:#fff;}
 .data_source a:visited	{color:#fff;}
 .data_source a:hover	{color:#FFC28A;}
 .data_source a:active	{color:#fff;}
-.data_source a span	{color:#ccc;}
-.data_source a.dlogs{width:20%;}
-.data_source a.slug	{width:28%;}
-.data_source a.csv	{width:20%; margin-right:0;}
+.data_source a span		{color:#ccc;}
+.data_source a.dlogs	{width:20%;}
+.data_source a.slug		{width:28%;}
+.data_source a.csv		{width:20%; margin-right:0;}
 
 /*	COUNT	*/
 span.count				{color:#ccc; font-size:12px; padding-left:10px;}
@@ -129,8 +129,8 @@ span.count				{color:#ccc; font-size:12px; padding-left:10px;}
 .wrap_length span.count	{padding:0 15px 0 5px; font-size:10px;}
 
 /*	DOCUMENTS	*/
-a.doc_link:before	{display:inline-block; vertical-align:top; content:"☰"; border:1px solid #CCC; padding:2px; color:#CCC; margin-right:-24px;}
-a.doc_link			{display:block; padding:10px 15px; font-size:10px; line-height:1.25em; position:relative; color:#FFF; background-color:rgba(50,58,64,0.6); border:1px solid #656a6f; border-bottom:0;}
+a.doc_link:before		{display:inline-block; vertical-align:top; content:"☰"; border:1px solid #CCC; padding:2px; color:#CCC; margin-right:-24px;}
+a.doc_link				{display:block; padding:10px 15px; font-size:10px; line-height:1.25em; position:relative; color:#FFF; background-color:rgba(50,58,64,0.6); border:1px solid #656a6f; border-bottom:0;}
 .wrap_document a		{color:#fff;}
 .wrap_document a:link	{color:#fff;}
 .wrap_document a:visited{color:#fff;}
@@ -202,45 +202,48 @@ td .currency	{font-size:10px; line-height:12px; color:#ccc;}
 .ref span.withdrawn					{background-color:#545e73; font-size:10px; color:#ddd;}
 .org-type		{margin-top:5px;}
 td.receiver div,
-td.provider div						{padding-bottom:2px; line-height:10px;}
+td.provider div,
+td.part_org_ref div,
+td.loc_name div						{padding-bottom:2px; line-height:10px;}
 td.receiver .receiver_text,
-td.provider .provider_text 			{font-size:13px; line-height:15px; padding-bottom:5px;}
+td.provider .provider_text,
+td.part_org_ref .part_org_text,
+td.loc_name .loc_text				{font-size:13px; line-height:15px; padding-bottom:5px;}
 td.description .description_text	{font-size:13px; line-height:15px; padding-bottom:7px; border:0;}
 td.description div 					{line-height:10px; padding-bottom:2px; margin-bottom:3px; border-bottom:1px dotted #666;}
 td.description div:last-of-type		{border:0;}
 
-table.budget	{border-collapse:collapse; table-layout:fixed; text-align:left; width:880px;}
-table.budget th	{padding-bottom:10px; margin-bottom:15px; font-size:13px; font-weight:normal; color:#CCC; line-height:1.35em; background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPBAMAAADJ+Ih5AAAAIVBMVEUAAAD////////////////////////////////////////PIev5AAAAC3RSTlMArxdHEAqfnTkpJkV64fYAAAAtSURBVAjXY8AKOGAMQwMIzSUoCWG4C4o5gBlBSkoBcPVwEbgauC6EOQiTMQEAKKIEY4aIsg8AAAAASUVORK5CYII=) no-repeat right 5px center;}
+table.budget			{border-collapse:collapse; table-layout:fixed; text-align:left; width:880px;}
+table.budget th			{padding-bottom:10px; margin-bottom:15px; font-size:13px; font-weight:normal; color:#CCC; line-height:1.35em; background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPBAMAAADJ+Ih5AAAAIVBMVEUAAAD////////////////////////////////////////PIev5AAAAC3RSTlMArxdHEAqfnTkpJkV64fYAAAAtSURBVAjXY8AKOGAMQwMIzSUoCWG4C4o5gBlBSkoBcPVwEbgauC6EOQiTMQEAKKIEY4aIsg8AAAAASUVORK5CYII=) no-repeat right 5px center;}
 .org table.budget th.status,
 table.budget th.value	{background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPBAMAAADJ+Ih5AAAAIVBMVEUAAAD////////////////////////////////////////PIev5AAAAC3RSTlMArxdHEAqfnTkpJkV64fYAAAAtSURBVAjXY8AKOGAMQwMIzSUoCWG4C4o5gBlBSkoBcPVwEbgauC6EOQiTMQEAKKIEY4aIsg8AAAAASUVORK5CYII=) no-repeat right -5px center, #1b232de8;}
 
 table.budget th:hover	{cursor:pointer;}
-table.budget td			{font-size:14px; color:#FFF; line-height:1.35em; vertical-align:top; border-bottom:1px solid #4d5264; padding:10px 0;}
+table.budget td			{font-size:14px; color:#FFF; line-height:initial; vertical-align:top; border-bottom:1px solid #4d5264; padding:10px 0;}
 table.budget td.value	{font-size:15px; padding-right:20px; text-align:right;}
 .org table.budget td.value			{font-size:14px;}
 
 table.budget tr:nth-of-type(1) td	{padding-top:15px;}
 table.budget th			{position:sticky; top:30px; z-index:1; background-color:#1b232de8; padding:10px 0;}
 table.budget th:after	{content:''; position:absolute; left:0; bottom:-1px; width:100%; border-bottom:1px solid #aaa;}
-table.part_org td.part_org_ref div	{line-height:10px; padding-top:5px;}
 
 /*	IATI ACTIVITY BUDGET AND PLANNED DISBURSEMENT TABLE	*/
-table.budget tr th.date,
-table.budget tr td.date				{width:100px; padding-right:20px;}
-table.budget tr th.tab_type,
-table.budget tr td.tab_type			{width:200px; padding-right:30px;}
-table.budget tr th.status,
-table.budget tr td.status			{width:170px;}
-table.budget tr th.value,
-table.budget tr td.value			{width:160px; padding-right:20px;}
+table.budget th.date,
+table.budget td.date				{width:100px; padding-right:20px;}
+table.budget th.tab_type,
+table.budget td.tab_type			{width:200px; padding-right:30px;}
+table.budget th.status,
+table.budget td.status			{width:170px;}
+table.budget th.value,
+table.budget td.value			{width:160px; padding-right:20px;}
 table.budget tr:last-of-type td		{border:0; padding-bottom:30px;}	/*	Remove border-bottom from last row of tables	*/
 
-.wrap_planned_disbursement table.budget tr th.provider,
-.wrap_planned_disbursement table.budget tr td.provider	{width:200px; padding-right:30px;}
-.wrap_planned_disbursement table.budget tr th.receiver,
-.wrap_planned_disbursement table.budget tr td.receiver	{width:170px;}
-.wrap_planned_disbursement table.budget tr th.tab_type,
-.wrap_planned_disbursement table.budget tr td.tab_type	{width:150px;}
+.wrap_planned_disbursement table.budget th.provider,
+.wrap_planned_disbursement table.budget td.provider	{width:200px; padding-right:30px;}
+.wrap_planned_disbursement table.budget th.receiver,
+.wrap_planned_disbursement table.budget td.receiver	{width:170px;}
+.wrap_planned_disbursement table.budget th.tab_type,
+.wrap_planned_disbursement table.budget td.tab_type	{width:150px;}
 
 /*	IATI ORG DATE AND STATUS COLUMN	*/
 .wrap_total_budget table.budget th.date,
@@ -305,11 +308,13 @@ table.budget.part_org td.part_org_type		{font-size:12px;}
 .wrap_humanitarian_scope td.hum_title		{padding-right:40px;}
 .wrap_humanitarian_scope th.hum_code,
 .wrap_humanitarian_scope td.hum_code		{width:160px; padding-right:20px;}
-.wrap_humanitarian_scope td.hum_code		{font-size:12px;}
 .wrap_humanitarian_scope th.hum_vocab,
 .wrap_humanitarian_scope td.hum_vocab		{width:130px; padding-right:20px;}
 .wrap_humanitarian_scope th.hum_type,
 .wrap_humanitarian_scope td.hum_type		{width:130px;}
+.wrap_humanitarian_scope td.hum_code,
+.wrap_humanitarian_scope td.hum_vocab,
+.wrap_humanitarian_scope td.hum_type		{font-size:12px;}
 
 /*	IATI ACTIVITY LOCATION TABLE	*/
 table.budget.location th,
@@ -320,13 +325,17 @@ table.budget.location th.loc_des,
 table.budget.location td.loc_des			{width:230px;}
 table.budget.location td.loc_des			{font-size:12px;}
 table.budget.location th.loc_pos,
-table.budget.location td.loc_pos			{width:100px;}
+table.budget.location td.loc_pos			{width:110px; padding-right:40px;}
 table.budget.location td.loc_pos			{font-size:12px; font-family:monospace;}
+table.budget.location th.loc_class,
+table.budget.location td.loc_class,
 table.budget.location th.loc_reach,
 table.budget.location td.loc_reach,
 table.budget.location th.loc_exact,
-table.budget.location td.loc_exact			{width:110px; padding-right:0px;}
-table.budget.location td.loc_name div		{line-height:1em;}
+table.budget.location td.loc_exact			{width:100px; padding-right:0px;}
+table.budget.location td.loc_class,
+table.budget.location td.loc_reach,
+table.budget.location td.loc_exact			{font-size:12px; line-height:14px;}
 table.budget.location td.loc_des:first-letter	{text-transform:capitalize;}
 table.budget.location td.loc_des div		{padding-top:5px;}
 table.budget.location td.loc_des .loc_act	{color:#ccc;}
@@ -399,12 +408,12 @@ table.budget.act_trans td.date				{width:110px; padding-right:0px;}
 .result_indicator .wrap_document			{margin:0 0 10px 0;}
 .wrap_result .sector_list_wrap				{color:#ccc; padding:0 0 10px 0;}
 .wrap_result .header.glossary				{margin-bottom:10px;}
-.wrap_result table.budget td				{vertical-align:middle; padding:5px 0;}
+.wrap_result table.budget td				{vertical-align:middle; padding:5px 0; line-height:14px;}
 .wrap_result table.budget tr.row_measure td	{color:#ccc; font-size:11px; padding:6px 10px 4px 0;}
 .result_facet								{font-size:11px; line-height:16px; color:#ccc;}
 .result_facet_name							{font-size:13px; color:#fff;}
 .result_facet_value							{font-weight:bold; font-size:14px; color:#fff;}
-.result_empty								{font-size:12px; color:#ccc;}
+.result_empty								{font-size:11px; color:#ccc;}
 .result_percent_wrap,
 .result_percent_wrap .result_empty			{display:inline;}
 .result_percent_wrap span					{display:inline-block; vertical-align:middle;}
