@@ -4,6 +4,8 @@ Check if sector code has narrative if non-dac
 Display percentage complete for activity dates on hover
 Add empty description for policy marker significance
 Update css
+Display location @srsName as a link when found
+Update participating-org column layout
 
 
 Development Portal (2020-04-14 shi)
